Version 1.4
-------------------------------------------------------------------------

Changes -
  1. ggmap now imports all packages save ggplot2 instead of depending on them.
  2. ggmapplot no longer uses a textConnection for parsing base_layer.


Version 1.3
-------------------------------------------------------------------------

New Features -
  1. a total overhaul of the geocode function (with backwards compatability).  geocode can now return more information such as the address (for when the location is lazy-specified, e.g. "the white house"), a bounding box, and political administrative bodies.
  2. revgeocode - a reverse geocoder using google maps.
  3. mapdist - a function to compute distances on maps using the google maps api.  distances in meters, km, and miles are returned as well as travel times in seconds, minutes and hours based on mode of transportation (driving, bicycling, or walking).  google query limit monitored with function distQueryCheck.
  4. route - a function to grab directions from google.  google query limit monitored with function routeQueryCheck. several options are available.
  5. qmap now accepts base_layer argument.

Fixes -
  1. qmap and ggmapplot now deal properly with maprange.
 *2. the coordinate system is now properly set to a mercator projection.
  3. custom version of annotation_custom added (not exported) to allow for placement in and plotting of overlays with mercator projection.

New depends -
  1. rjson




Version 1.2
-------------------------------------------------------------------------

Additions -