@@ -4,7 +4,8 @@
 \usage{
   geocode(location,
     output = c("latlon", "latlona", "more", "all"),
-    messaging = FALSE)
+    messaging = FALSE, sensor = TRUE,
+    override_limit = FALSE)
 }
 \arguments{
   \item{location}{a character string specifying a location
@@ -13,6 +14,12 @@
   \item{output}{amount of output}
 
   \item{messaging}{turn messaging on/off}
+
+  \item{sensor}{whether or not the geocoding request comes
+  from a device with a location sensor}
+
+  \item{override_limit}{override the current query count
+  (.GoogleGeocodeQueryCount)}
 }
 \value{
   depends (at least a data.frame with variables lon and
@@ -37,6 +44,14 @@ geocode(c('baylor university', 'the vatican'))
 geocode(c('baylor university', 'the vatican'), output = 'latlona')
 geocode(c('baylor university', 'the vatican'), output = 'more')
 geocode('the eiffel tower', output = 'all')
+geocodeQueryCheck()
+
+# careful in running this...
+library(stringr)
+ads <- unique(crime$address)[1:120]
+ads <- paste(ads, ', houston, texas', sep = '')
+ads <- str_trim(ads)
+gc <- geocode(ads)
 }
 }
 \author{
